<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayout">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="40sp"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/iv_login_backarrow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/backarrow_short"
                android:layout_toLeftOf="@id/tv_login_title"
                android:layout_toStartOf="@id/tv_login_title"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:hint="@string/login_hint_user" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@id/et_login_username"
            android:layout_centerHorizontal="true"
            android:hint="@string/login_hint_pass" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp">
        <Button
            android:id="@+id/button_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login_button_login" />

        <CheckBox
            android:id="@+id/cb_login_rememberUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_cb_username"
            android:layout_below="@id/button_login_login"/>

        <CheckBox
            android:id="@+id/cb_login_loginAutomatically"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_cb_autologin"
            android:layout_below="@id/cb_login_rememberUser"/>
    </RelativeLayout>
</LinearLayout>