<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
            <TextView
                android:id="@+id/tv_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textSize="35sp"
                android:textColor="#000000"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/iv_register_backarrow"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/backarrow_short"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/tv_register_title"
                android:layout_toStartOf="@+id/tv_register_title" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_hint_username" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_below="@id/et_register_username"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_hint_password" />

            <EditText
                android:id="@+id/et_register_password_repeat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_below="@id/et_register_password"
                android:layout_centerHorizontal="true"
                android:hint="@string/register_hint_password_repeat" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
            
            <Spinner
                android:id="@+id/spinnerPositions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/positions_descr">

                </Spinner>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp">
            <Button
                android:id="@+id/button_register_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/register_button_register"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

        </RelativeLayout>
</LinearLayout>