<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zip.android.treningpilkarski.exercise_fragments.SimpleExerciseFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/simpexer_name_placeholder"
        android:id="@+id/tv_exercise_name"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/simpexer_serie"
        android:id="@+id/tv_series"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/tv_exercise_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simpexer_single_seria"
        android:id="@+id/tv_seria1"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_series"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simpexer_single_seria"
        android:id="@+id/tv_seria2"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/tv_seria1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simpexer_single_seria"
        android:id="@+id/tv_seria3"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/tv_seria2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simpexer_single_seria"
        android:id="@+id/tv_seria4"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/tv_seria3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/simpexer_single_seria"
        android:id="@+id/tv_seria5"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/tv_seria4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/simpexer_ile_zrobiles"
        android:id="@+id/tv_ile_zrobione"
        android:layout_below="@+id/tv_seria5"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/et_ile"
        android:layout_below="@+id/tv_ile_zrobione"
        android:hint="@string/simpexer_hint_ile"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@+id/et_ile"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_OK"
            android:id="@+id/button_ok" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simpexer_button_fill"
            android:id="@+id/button_auto" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_simpleexercise_help"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/help"/>

</RelativeLayout>
