<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zip.android.treningpilkarski.SpecExcerciseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.77"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/exercise_name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"

        android:layout_gravity="center_horizontal">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_help_gifholder"
            android:layout_below="@id/rellayout_help_title"
            android:src="@drawable/exercise_spec_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"

      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_distance"
            android:id="@+id/exercise_distance"
          android:gravity="top"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_done"
            android:layout_toLeftOf="@id/exercise_dialog_numberPicker"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/exercise_done"

            />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/exercise_dialog_numberPicker"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/exercise_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_series"
            android:textSize="15dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"

            android:layout_toRightOf="@+id/exercise_dialog_numberPicker"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>

    <!--
    DODAC
    -dystans
    -effect
    -require
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_effect"
            android:id="@+id/exercise_effect"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_required"
            android:id="@+id/exercise_required"
            android:textSize="15dp"
            android:layout_above="@+id/exercise_effect"
            android:layout_centerHorizontal="true" />


        <Button
            android:id="@+id/button_info_choose"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="15sp"

            android:text="@string/button_exercise_accept"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/exercise_effect" />
    </RelativeLayout>

</LinearLayout>
