<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="zip.android.treningpilkarski.AdminActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_sharedpreferences_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/admin_sharedpreferences_user_label"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_sharedpreferences_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placeholder"
            android:layout_below="@+id/tv_sharedpreferences_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/button_resetSharedPreferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_button_reset"
            android:onClick="resetSharedPreferences"
            android:layout_below="@+id/tv_sharedpreferences_container"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_sharedpreferences_admin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/admin_sharedpreferences_admin_label"
            android:layout_below="@+id/button_resetSharedPreferences"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tv_sharedpreferences_admin_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/placeholder"
            android:layout_below="@id/tv_sharedpreferences_admin_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:id="@+id/button_resetSharedPreferences_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_button_reset"
            android:onClick="resetSharedPreferencesAdmin"
            android:layout_below="@id/tv_sharedpreferences_admin_container"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <CheckBox
            android:id="@+id/cb_admin_useInternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/button_resetSharedPreferences_admin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/admin_cb_useInternalStorage" />

        <Button
            android:id="@+id/button_useInternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_admin_useInternalStorage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="getAdminOptions"
            android:text="@string/button_OK" />

        <TextView
            android:id="@+id/tv_internalstorage_admin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_useInternalStorage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/admin_internalstorage_label"/>
        <TextView
            android:id="@+id/tv_internalstorage_admin_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_internalstorage_admin_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/placeholder"/>

        <Button
            android:id="@+id/button_writeUsersToInternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_internalstorage_admin_container"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="saveUsersToInternalStorage"
            android:text="@string/admin_button_toInternalStorage" />

        <Button
            android:id="@+id/button_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEMP"
            android:layout_below="@+id/button_writeUsersToInternalStorage" />
    </RelativeLayout>
</ScrollView>
