<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zip.android.treningpilkarski.SpecExcerciseFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.78"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/exercise_name"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_help_gifholder"
            android:layout_below="@id/rellayout_help_title"
            android:src="@drawable/exercise_spec_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_distance"
            android:id="@+id/exercise_distance"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="15dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_done"
            android:layout_toLeftOf="@id/exercise_dialog_numberPicker"
            android:layout_centerVertical="true"
            android:textSize="15dp"
            android:layout_marginRight="15dp"
            android:id="@+id/exercise_done"

            />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exercise_dialog_numberPicker"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/exercise_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_series"
            android:textSize="15dp"
            android:layout_alignTop="@+id/exercise_done"
            android:layout_toRightOf="@+id/exercise_dialog_numberPicker"
            android:layout_marginLeft="15dp"/>
    </RelativeLayout>

    <!--
    DODAC
    -dystans
    -effect
    -require
    -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_effect"
            android:id="@+id/exercise_effect"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/exercise_required"
            android:id="@+id/exercise_required"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/button_info_choose"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/button_exercise_accept" />
    </RelativeLayout>

</LinearLayout>
